[gd_scene load_steps=21 format=2]

[ext_resource path="res://entities/level-specific/garage-door.gd" type="Script" id=1]
[ext_resource path="res://entities/interactables/lever/Lever.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/shaders/per-object-dither/first-pass.shader" type="Shader" id=3]
[ext_resource path="res://assets/shaders/per-object-dither/per-object-dither.shader" type="Shader" id=4]
[ext_resource path="res://assets/shaders/per-object-dither/blue_noise.png" type="Texture" id=5]
[ext_resource path="res://assets/shaders/per-object-dither/palettes/haptics-you-can-hear-1.png" type="Texture" id=6]
[ext_resource path="res://assets/shaders/per-object-dither/dither-mat.tres" type="Material" id=7]
[ext_resource path="res://addons/wwise/runtime/nodes/ak_bank.gd" type="Script" id=8]
[ext_resource path="res://addons/destruction/destruction.gd" type="Script" id=9]
[ext_resource path="res://entities/level-specific/door-fracture.tscn" type="PackedScene" id=10]

[sub_resource type="ArrayMesh" id=1]
resource_name = "haptics-you-can-hear_Cube002"
surfaces/0 = {
"aabb": AABB( -37.4797, 0, -33.7745, 74.9594, 50, 36.5088 ),
"array_data": PoolByteArray( 138, 194, 133, 65, 0, 0, 0, 0, 80, 254, 46, 64, 0, 129, 127, 63, 0, 54, 170, 56, 138, 194, 133, 65, 0, 0, 0, 0, 80, 254, 46, 64, 0, 32, 37, 133, 0, 54, 170, 56, 138, 194, 133, 65, 0, 0, 0, 0, 80, 254, 46, 64, 103, 233, 127, 63, 0, 54, 170, 56, 139, 194, 133, 193, 0, 0, 0, 0, 80, 254, 46, 64, 153, 233, 127, 63, 0, 54, 85, 57, 139, 194, 133, 193, 0, 0, 0, 0, 80, 254, 46, 64, 0, 129, 127, 63, 0, 54, 85, 57, 139, 194, 133, 193, 0, 0, 0, 0, 80, 254, 46, 64, 0, 32, 210, 139, 0, 54, 85, 57, 57, 235, 21, 194, 0, 0, 72, 66, 174, 114, 226, 193, 177, 209, 127, 63, 0, 57, 85, 57, 57, 235, 21, 194, 0, 0, 72, 66, 174, 114, 226, 193, 0, 60, 180, 145, 0, 57, 85, 57, 57, 235, 21, 194, 0, 0, 72, 66, 174, 114, 226, 193, 0, 127, 127, 63, 0, 57, 85, 57, 60, 235, 21, 66, 0, 0, 72, 66, 174, 114, 226, 193, 0, 60, 62, 132, 0, 57, 170, 56, 60, 235, 21, 66, 0, 0, 72, 66, 174, 114, 226, 193, 0, 127, 127, 63, 0, 57, 170, 56, 60, 235, 21, 66, 0, 0, 72, 66, 174, 114, 226, 193, 79, 209, 127, 63, 0, 57, 170, 56, 27, 181, 179, 193, 0, 0, 200, 65, 40, 79, 187, 192, 153, 233, 127, 63, 0, 56, 85, 57, 27, 181, 179, 193, 0, 0, 200, 65, 40, 79, 187, 192, 177, 209, 127, 63, 0, 56, 85, 57, 27, 181, 179, 193, 0, 0, 200, 65, 40, 79, 187, 192, 0, 32, 222, 131, 0, 56, 85, 57, 27, 181, 179, 193, 0, 0, 200, 65, 40, 79, 187, 192, 0, 60, 187, 138, 0, 56, 85, 57, 26, 181, 179, 65, 0, 0, 200, 65, 40, 79, 187, 192, 0, 32, 46, 139, 0, 56, 170, 56, 26, 181, 179, 65, 0, 0, 200, 65, 40, 79, 187, 192, 0, 60, 76, 145, 0, 56, 170, 56, 26, 181, 179, 65, 0, 0, 200, 65, 40, 79, 187, 192, 79, 209, 127, 63, 0, 56, 170, 56, 26, 181, 179, 65, 0, 0, 200, 65, 40, 79, 187, 192, 103, 233, 127, 63, 0, 56, 170, 56, 138, 194, 133, 65, 0, 0, 0, 0, 96, 254, 46, 192, 0, 129, 127, 63, 0, 54, 170, 56, 138, 194, 133, 65, 0, 0, 0, 0, 96, 254, 46, 192, 94, 129, 37, 123, 0, 54, 170, 56, 138, 194, 133, 65, 0, 0, 0, 0, 96, 254, 46, 192, 103, 233, 127, 63, 0, 54, 170, 56, 139, 194, 133, 193, 0, 0, 0, 0, 96, 254, 46, 192, 153, 233, 127, 63, 0, 54, 85, 57, 139, 194, 133, 193, 0, 0, 0, 0, 96, 254, 46, 192, 0, 129, 127, 63, 0, 54, 85, 57, 139, 194, 133, 193, 0, 0, 0, 0, 96, 254, 46, 192, 94, 129, 210, 117, 0, 54, 85, 57, 27, 181, 179, 193, 0, 0, 200, 65, 188, 38, 53, 193, 153, 233, 127, 63, 0, 56, 85, 57, 27, 181, 179, 193, 0, 0, 200, 65, 188, 38, 53, 193, 177, 209, 127, 63, 0, 56, 85, 57, 27, 181, 179, 193, 0, 0, 200, 65, 188, 38, 53, 193, 66, 129, 187, 118, 0, 56, 85, 57, 27, 181, 179, 193, 0, 0, 200, 65, 188, 38, 53, 193, 94, 129, 222, 125, 0, 56, 85, 57, 26, 181, 179, 65, 0, 0, 200, 65, 188, 38, 53, 193, 66, 129, 76, 111, 0, 56, 170, 56, 26, 181, 179, 65, 0, 0, 200, 65, 188, 38, 53, 193, 94, 129, 46, 117, 0, 56, 170, 56, 26, 181, 179, 65, 0, 0, 200, 65, 188, 38, 53, 193, 79, 209, 127, 63, 0, 56, 170, 56, 26, 181, 179, 65, 0, 0, 200, 65, 188, 38, 53, 193, 103, 233, 127, 63, 0, 56, 170, 56, 57, 235, 21, 194, 0, 0, 72, 66, 33, 25, 7, 194, 177, 209, 127, 63, 0, 57, 85, 57, 57, 235, 21, 194, 0, 0, 72, 66, 33, 25, 7, 194, 66, 129, 180, 111, 0, 57, 85, 57, 57, 235, 21, 194, 0, 0, 72, 66, 33, 25, 7, 194, 0, 127, 127, 63, 0, 57, 85, 57, 60, 235, 21, 66, 0, 0, 72, 66, 33, 25, 7, 194, 66, 129, 62, 124, 0, 57, 170, 56, 60, 235, 21, 66, 0, 0, 72, 66, 33, 25, 7, 194, 0, 127, 127, 63, 0, 57, 170, 56, 60, 235, 21, 66, 0, 0, 72, 66, 33, 25, 7, 194, 79, 209, 127, 63, 0, 57, 170, 56 ),
"array_index_data": PoolByteArray( 1, 0, 14, 0, 16, 0, 1, 0, 5, 0, 14, 0, 15, 0, 9, 0, 17, 0, 15, 0, 7, 0, 9, 0, 21, 0, 29, 0, 25, 0, 21, 0, 31, 0, 29, 0, 28, 0, 37, 0, 35, 0, 28, 0, 30, 0, 37, 0, 13, 0, 34, 0, 6, 0, 13, 0, 27, 0, 34, 0, 3, 0, 26, 0, 12, 0, 3, 0, 23, 0, 26, 0, 8, 0, 38, 0, 10, 0, 8, 0, 36, 0, 38, 0, 11, 0, 32, 0, 18, 0, 11, 0, 39, 0, 32, 0, 19, 0, 22, 0, 2, 0, 19, 0, 33, 0, 22, 0, 0, 0, 24, 0, 4, 0, 0, 0, 20, 0, 24, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 60,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 40
}

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( 34.8643, 45.0308, -23.0209, -37.7702, 49.0973, -34.0623, -23.8171, 25.8621, -13.1499, 37.7702, 49.0973, -34.0623, -37.7702, 50.2585, -27.6693, 23.2404, 25.8621, -5.59209, 22.6562, 24.6959, -11.9878, -23.2404, 25.2815, -5.59209, 37.7702, 50.2585, -27.6693, 37.0064, 50, -33.7744, -26.1464, 31.0922, -10.2433, -37.0064, 50, -33.7744, -22.6562, 24.6959, -11.9878, 22.2952, 24.8996, -5.8189, 33.1192, 42.7061, -20.6967, 23.8245, 25.8621, -13.1499, -33.1192, 42.7061, -20.6967, -22.2952, 24.8996, -5.8189, 37.1861, 48.5168, -26.5072, -37.1861, 48.5168, -26.5072, 26.1464, 31.0922, -10.2433 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -18.0082, 4.36049, -5.00885, 22.6621, 24.6935, -5.00885, 19.175, 9.58862, 0.216442, -22.6621, 24.6935, -5.00885, 22.6621, 23.5295, -11.4029, -16.8458, 0.875885, 3.1227, 16.8502, -0.288096, -3.26993, -22.6621, 23.5295, -11.4029, 16.8502, 0.875885, 3.1227, -16.8458, -0.288096, -3.26993, -18.5893, 5.52203, 1.37951, 19.175, 7.84754, -6.17192, 21.2425, 23.911, -10.9479, 18.5938, 5.52203, 1.37951, -21.2425, 23.911, -10.9479, -17.427, 0.293895, -3.26993, -19.1705, 9.58862, 0.216442, 22.0765, 20.6244, -3.85004, -22.0765, 20.6244, -3.85004, 17.4314, 0.293895, -3.26993, -16.8743, 0.671568, 2.32927, 18.0126, 4.36049, -5.00885, -19.7517, 10.1706, -6.75203, 19.7562, 10.1706, -6.75203, 16.8749, 0.674105, 2.32785, -20.9141, 15.3963, -2.10686 )

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( -8.5877, 25, 8.5877, -31.0403, 50, -81.0403, -8.5877, 25, -58.5877, -8.5877, 25, 8.5877, -31.0403, 50, 31.0403, -31.0403, 50, -81.0403, 47.4634, 25, -58.5877, 81.0403, 50, -81.0403, 58.5877, 25, -58.5877, 47.4634, 25, -58.5877, 62.4797, 50, -81.0403, 81.0403, 50, -81.0403, 58.5877, 25, -58.5877, 81.0403, 50, 31.0403, 58.5877, 25, 8.5877, 58.5877, 25, -58.5877, 81.0403, 50, -81.0403, 81.0403, 50, 31.0403, 2.5366, 25, 8.5877, -31.0403, 50, 31.0403, -8.5877, 25, 8.5877, 2.5366, 25, 8.5877, -12.4797, 50, 31.0403, -31.0403, 50, 31.0403, 41.72, 0, -50, 50, 0, 0, 41.72, 0, 0, 41.72, 0, -50, 50, 0, -50, 50, 0, 0, 0, 0, -50, 8.28, 0, 0, 0, 0, 0, 0, 0, -50, 8.28, 0, -50, 8.28, 0, 0, 8.28, 0, -50, 41.72, 0, 0, 8.28, 0, 0, 8.28, 0, -50, 41.72, 0, -50, 41.72, 0, 0, 58.5877, 25, 8.5877, 62.4797, 50, 31.0403, 47.4634, 25, 8.5877, 58.5877, 25, 8.5877, 81.0403, 50, 31.0403, 62.4797, 50, 31.0403, 47.4634, 25, 8.5877, -12.4797, 50, 31.0403, 2.5366, 25, 8.5877, 47.4634, 25, 8.5877, 62.4797, 50, 31.0403, -12.4797, 50, 31.0403, -8.5877, 25, -58.5877, -12.4797, 50, -81.0403, 2.5366, 25, -58.5877, -8.5877, 25, -58.5877, -31.0403, 50, -81.0403, -12.4797, 50, -81.0403, 0, 0, -50, 2.5366, 25, -58.5877, 8.28, 0, -50, 0, 0, -50, -8.5877, 25, -58.5877, 2.5366, 25, -58.5877, 41.72, 0, 0, 2.5366, 25, 8.5877, 8.28, 0, 0, 41.72, 0, 0, 47.4634, 25, 8.5877, 2.5366, 25, 8.5877, 50, 0, 0, 47.4634, 25, 8.5877, 41.72, 0, 0, 50, 0, 0, 58.5877, 25, 8.5877, 47.4634, 25, 8.5877, 8.28, 0, 0, -8.5877, 25, 8.5877, 0, 0, 0, 8.28, 0, 0, 2.5366, 25, 8.5877, -8.5877, 25, 8.5877, 50, 0, -50, 58.5877, 25, 8.5877, 50, 0, 0, 50, 0, -50, 58.5877, 25, -58.5877, 58.5877, 25, 8.5877, 41.72, 0, -50, 58.5877, 25, -58.5877, 50, 0, -50, 41.72, 0, -50, 47.4634, 25, -58.5877, 58.5877, 25, -58.5877, 0, 0, 0, -8.5877, 25, -58.5877, 0, 0, -50, 0, 0, 0, -8.5877, 25, 8.5877, -8.5877, 25, -58.5877 )

[sub_resource type="ArrayMesh" id=5]
resource_name = "haptics-you-can-hear_Cube001"
surfaces/0 = {
"aabb": AABB( -31.0403, 0, -81.0403, 112.081, 50, 112.081 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 71, 91, 72, 210, 0, 48, 0, 52, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 71, 91, 218, 168, 0, 54, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 71, 91, 211, 168, 0, 54, 0, 60, 120, 82, 248, 193, 0, 0, 72, 66, 120, 82, 248, 65, 66, 93, 222, 170, 0, 57, 0, 0, 120, 82, 248, 193, 0, 0, 72, 66, 120, 82, 248, 65, 66, 93, 216, 170, 0, 57, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 72, 194, 35, 55, 93, 220, 0, 48, 0, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 72, 194, 35, 55, 179, 148, 0, 54, 0, 58, 120, 82, 248, 193, 0, 0, 72, 66, 158, 20, 162, 194, 33, 60, 175, 155, 0, 57, 0, 58, 0, 0, 72, 66, 0, 0, 0, 0, 0, 0, 0, 128, 185, 91, 51, 168, 0, 54, 0, 52, 158, 20, 162, 66, 0, 0, 72, 66, 120, 82, 248, 65, 190, 93, 51, 170, 0, 57, 0, 52, 0, 0, 72, 66, 0, 0, 0, 0, 0, 0, 72, 194, 221, 55, 77, 157, 0, 54, 0, 56, 158, 20, 162, 66, 0, 0, 72, 66, 158, 20, 162, 194, 223, 60, 81, 148, 0, 57, 0, 56, 68, 225, 38, 66, 0, 0, 0, 0, 0, 0, 72, 194, 0, 93, 127, 193, 170, 52, 0, 56, 68, 225, 38, 66, 0, 0, 0, 0, 0, 0, 72, 194, 0, 93, 102, 146, 0, 54, 170, 56, 230, 122, 4, 65, 0, 0, 0, 0, 0, 0, 72, 194, 0, 93, 127, 193, 170, 50, 0, 56, 230, 122, 4, 65, 0, 0, 0, 0, 0, 0, 72, 194, 0, 93, 156, 143, 0, 54, 85, 57, 232, 172, 71, 193, 0, 0, 72, 66, 158, 20, 162, 194, 0, 60, 176, 149, 0, 57, 85, 57, 59, 235, 121, 66, 0, 0, 72, 66, 158, 20, 162, 194, 0, 60, 76, 145, 0, 57, 170, 56, 234, 122, 4, 65, 0, 0, 0, 0, 0, 0, 0, 128, 52, 127, 127, 193, 170, 50, 0, 52, 234, 122, 4, 65, 0, 0, 0, 0, 0, 0, 0, 128, 52, 127, 234, 171, 0, 54, 85, 45, 70, 225, 38, 66, 0, 0, 0, 0, 0, 0, 0, 128, 52, 127, 127, 193, 170, 52, 0, 52, 70, 225, 38, 66, 0, 0, 0, 0, 0, 0, 0, 128, 52, 127, 14, 170, 0, 54, 85, 49, 54, 235, 121, 66, 0, 0, 72, 66, 120, 82, 248, 65, 66, 127, 36, 169, 0, 57, 85, 49, 240, 172, 71, 193, 0, 0, 72, 66, 120, 82, 248, 65, 66, 127, 234, 165, 0, 57, 85, 45, 40, 103, 9, 193, 0, 0, 200, 65, 40, 103, 9, 65, 76, 88, 221, 166, 0, 56, 0, 0, 40, 103, 9, 193, 0, 0, 200, 65, 40, 103, 9, 65, 76, 88, 214, 166, 0, 56, 0, 60, 40, 103, 9, 193, 0, 0, 200, 65, 202, 89, 106, 194, 38, 50, 184, 147, 0, 56, 0, 58, 202, 89, 106, 66, 0, 0, 200, 65, 202, 89, 106, 194, 218, 50, 72, 149, 0, 56, 0, 56, 202, 89, 106, 66, 0, 0, 200, 65, 40, 103, 9, 65, 180, 88, 35, 166, 0, 56, 0, 52, 140, 218, 61, 66, 0, 0, 200, 65, 40, 103, 9, 65, 79, 127, 22, 160, 0, 56, 85, 49, 24, 87, 34, 64, 0, 0, 200, 65, 40, 103, 9, 65, 79, 127, 233, 160, 0, 56, 85, 45, 24, 87, 34, 64, 0, 0, 200, 65, 202, 89, 106, 194, 0, 44, 195, 143, 0, 56, 85, 57, 140, 218, 61, 66, 0, 0, 200, 65, 202, 89, 106, 194, 0, 44, 61, 143, 0, 56, 170, 56 ),
"array_index_data": PoolByteArray( 25, 0, 7, 0, 26, 0, 25, 0, 4, 0, 7, 0, 32, 0, 11, 0, 27, 0, 32, 0, 17, 0, 11, 0, 27, 0, 9, 0, 28, 0, 27, 0, 11, 0, 9, 0, 30, 0, 3, 0, 24, 0, 30, 0, 23, 0, 3, 0, 12, 0, 8, 0, 20, 0, 12, 0, 10, 0, 8, 0, 5, 0, 18, 0, 0, 0, 5, 0, 14, 0, 18, 0, 14, 0, 20, 0, 18, 0, 14, 0, 12, 0, 20, 0, 28, 0, 22, 0, 29, 0, 28, 0, 9, 0, 22, 0, 29, 0, 23, 0, 30, 0, 29, 0, 22, 0, 23, 0, 26, 0, 16, 0, 31, 0, 26, 0, 7, 0, 16, 0, 6, 0, 31, 0, 15, 0, 6, 0, 26, 0, 31, 0, 21, 0, 30, 0, 19, 0, 21, 0, 29, 0, 30, 0, 8, 0, 29, 0, 21, 0, 8, 0, 28, 0, 29, 0, 19, 0, 24, 0, 1, 0, 19, 0, 30, 0, 24, 0, 10, 0, 28, 0, 8, 0, 10, 0, 27, 0, 28, 0, 13, 0, 27, 0, 10, 0, 13, 0, 32, 0, 27, 0, 2, 0, 26, 0, 6, 0, 2, 0, 25, 0, 26, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 102,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 33
}

[sub_resource type="ShaderMaterial" id=7]
render_priority = -1
shader = ExtResource( 4 )
shader_param/u_bit_depth = 48
shader_param/u_contrast = 1.0
shader_param/u_offset = 0.0
shader_param/u_dither_size = 1
shader_param/u_dither_tex = ExtResource( 5 )
shader_param/u_color_tex = ExtResource( 6 )

[sub_resource type="ShaderMaterial" id=8]
render_priority = -2
next_pass = SubResource( 7 )
shader = ExtResource( 3 )
shader_param/u_albedo = Color( 0.811765, 0.811765, 0.811765, 1 )

[sub_resource type="ProceduralSky" id=10]
sky_top_color = Color( 0, 0, 0, 1 )
sky_horizon_color = Color( 1, 1, 1, 1 )
ground_bottom_color = Color( 1, 1, 1, 1 )
ground_horizon_color = Color( 1, 1, 1, 1 )

[sub_resource type="Environment" id=6]
background_mode = 2
background_sky = SubResource( 10 )
fog_enabled = true
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 0, 0, 0, 1 )
fog_depth_enabled = false
fog_height_min = 1.0
fog_height_max = 10.0

[sub_resource type="BoxShape" id=9]

[node name="haptics-you-can-hear" type="Spatial"]

[node name="lever" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.765719, 0, -0.643175, 0, 1, 0, 0.643175, 0, 0.765719, 21.139, 0, -33.536 )

[node name="garage-door" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, -48.813 )
collision_layer = 17
collision_mask = 22
mode = 3
contacts_reported = 4
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="door-mesh" type="MeshInstance" parent="garage-door"]
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = ExtResource( 7 )

[node name="CollisionShape2" type="CollisionShape" parent="garage-door"]
shape = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="garage-door"]
shape = SubResource( 3 )

[node name="Destruction" type="Node" parent="garage-door"]
script = ExtResource( 9 )
shard_scene = ExtResource( 10 )
shard_container = NodePath("../../door")
shard_material = ExtResource( 7 )

[node name="cave" type="StaticBody" parent="."]
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="cave"]
shape = SubResource( 4 )

[node name="cave-mesh" type="MeshInstance" parent="cave"]
mesh = SubResource( 5 )
skeleton = NodePath("../..")
material/0 = SubResource( 8 )

[node name="env" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.113776, 0.993507, 0, -0.993507, 0.113776, 0, 81.1608, 0 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.99493, 0.10057, 0, -0.10057, -0.99493, 22.5162, 6.79317, -115.659 )
shadow_enabled = true
spot_range = 260.154
spot_angle = 50.0447

[node name="AkBank" type="Node" parent="."]
script = ExtResource( 8 )
bank = {
"Id": 2793162419,
"Name": "HAPTICS YOU CAN HEAR"
}
load_on = 3

[node name="door-close-detection" type="Area" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="door-close-detection"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.9327, -0.0261708, -46.211 )
shape = SubResource( 9 )

[node name="hammer-spawn" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.7179, 38.1433, -25.5282 )

[node name="door" type="Spatial" parent="."]

[connection signal="body_entered" from="door-close-detection" to="garage-door" method="_delay_first_entry"]
[connection signal="body_exited" from="door-close-detection" to="garage-door" method="_start_lifting"]
